# cosmic-applet-github-status

./: Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/workflows/: release.yaml
i18n/en/: cosmic_applet_github_status.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs
